--- a/app/src/main/res/layout/menu_list_item.xml
+++ b/app/src/main/res/layout/menu_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -24,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:text="@{String.valueOf(menu.price)}" />
+            app:strikeThroughText="@{String.valueOf(menu.price)}" />
 
         <TextView
             android:id="@+id/menu_after_price"
